trying to fix the sidebar not showing up completely

--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -84,11 +84,17 @@
     z-index: 10;
 
     &.sticky {
-      @include clearfix();
-      position: -webkit-sticky;
-      position: sticky;
-      top: 2em;
-      float: right;
+      overflow-y: auto;
+      /* calculate height of nav list
+         viewport height - nav height - masthead x-padding
+      */
+      height: calc(100vh - #{$nav-height} - 2em);
+      
+      //@include clearfix();
+      //position: -webkit-sticky;
+      //position: sticky;
+      //top: 2em;
+      //float: right;
     }
   }
 
